# smo_archipelago

./: .gitignore  .gitmodules  CLAUDE.md  HAKKUN.md  LICENSE  README.md  flake.nix
.claude/: settings.local.json
.claude/skills/smo-build/: SKILL.md
.claude/skills/smo-host-tests/: SKILL.md
.claude/skills/smo-loopback-test/: SKILL.md
.claude/skills/smo-poptracker/: SKILL.md
.claude/skills/smo-symbol-discovery/: SKILL.md
.github/workflows/: release.yml  test.yml
apworld/: README.md
apworld/smo_archipelago/: DataValidation.py  Game.py  Helpers.py  Items.py  Locations.py  Meta.py  Options.py  Regions.py  Rules.py  __init__.py  smo_test.py  talkatoo_order.py  talkatoo_requirements.py
apworld/smo_archipelago/_setup/: __init__.py  build.py  deploy.py  installers.py  launcher_errors.py  net.py  prereqs.py  smoap_file.py  wizard.py  wizard_cli.py
apworld/smo_archipelago/client/: commands.py  context.py  datapackage.py  discovery.py  gui.py  main.py  net_util.py  protocol.py  setup_state.py  state.py  switch_server.py
apworld/smo_archipelago/data/: game.json  items.json  locations.json  meta.json  regions.json
apworld/smo_archipelago/docs/: setup_en.md
apworld/smo_archipelago/hooks/: Data.py  Helpers.py  Options.py  Rules.py  World.py
apworld/smo_archipelago/tests/: pyproject.toml  test_ap_loopback.py  test_commands.py  test_connect_gate.py  test_deploy.py  test_extract_hactool_runner.py  test_extract_oead_bootstrap_guard.py  test_extract_real_nsp.py  test_goal_on_victory_location.py  test_installers.py  test_is_setup_complete.py  test_launch_routing.py  test_launcher_errors.py  test_net.py  test_outstanding.py  test_prereqs.py  test_protocol.py  test_release_audit.py  test_repl.py  test_setup_appdata_root.py  test_setup_state_maps.py  test_slot_change_reset.py  test_smoap_file.py  test_state_reconciliation.py  test_switch_pill_layout.py  test_switch_server.py  test_talkatoo_order.py  (+4 more)
bridge/: config.example.toml
bridge/smo_ap_bridge/: __main__.py  ap_client.py  config.py  display.py  maps.py  protocol.py  repl.py  scout_cache.py  state.py  switch_server.py
bridge/tests/: test_colors.py  test_datapackage.py  test_display.py  test_maps.py  test_protocol.py  test_repl.py  test_scout_cache.py  test_shine_map_extraction.py  test_switch_server.py
docs/: 2d-moon-color-research.md  TALKATOO.md  architecture.md  build-linux.md  changing-servers.md  extract-moon-data.md  first-time-setup.md  handoff-talkatoo.md  install-switch.md  milestones.md  release-process.md  wire-protocol.md
poptracker/: versions.json
scripts/: build_poptracker_pack.py  build_switchmod.py  check_nso_symbols.py  extract_shine_map.py  fix_hakkun_symlinks.py  install_apworld.py  install_hooks.ps1  local_release_audit.ps1  patch_hakkun.py  release_audit.py  setup_imgui_addons.py  setup_sail_winpath.py  sync_capture_table.py
switch-mod/: CMakeLists.txt
switch-mod-hk/src/: main.cpp
switch-mod/config/: config.cmake
switch-mod/src/: main.cpp
switch-mod/src/ap/: ApClient.cpp  ApClient.hpp  ApDiscovery.cpp  ApFrameBridge.cpp  ApFrameBridge.hpp  ApProtocol.cpp  ApProtocol.hpp  ApState.cpp  ApState.hpp  shine_lookup.hpp
switch-mod/src/game/: CaptureGate.cpp  CaptureGate.hpp  HackEndParam.hpp  KingdomOrderGate.cpp  KingdomOrderGate.hpp  KingdomUnlock.cpp  KingdomUnlock.hpp  MoonApply.cpp
switch-mod/src/hooks/: AddPayShineHook.cpp  AddPayShineHook.hpp  CappyMessageHook.cpp  CaptureStartHook.cpp  EndHackProbeHook.cpp  HookSymbols.hpp  MoonGetHook.cpp  MoonLabelHook.cpp  SaveLoadHook.cpp  ShineAppearanceHook.cpp  ShineNumByWorldGetHook.cpp  ShineNumGetHook.cpp  TalkatooMenuMarkHook.cpp  TalkatooSpeechHook.cpp  WorldMapSelectHook.cpp
switch-mod/src/ui/: ApDebugConsole.cpp  ApHudOverlay.cpp  CappyMessenger.cpp  CappyMessenger.hpp
switch-mod/src/util/: Log.cpp  Log.hpp
switch-mod/syms/game/: SmoApSymbols.sym
switch-mod/syms/nn/: socket.sym
switch-mod/tests/: locations_fixture.json  shine_map_fixture.json  test_cappy_messenger.cpp  test_json.cpp  test_protocol.cpp  test_shine_lookup.cpp
(+6 files in other folders)
